--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <html lang="en-US">
 	<head>
 		<title>GWA Calculator</title>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="" />
 
 		<!--Styles-->
@@ -14,6 +11,16 @@
 		<link rel="stylesheet" href="./CSS/main.css" />
 		<link rel="stylesheet" href="./CSS/header.css" />
 		<link rel="stylesheet" href="./CSS/addCourse.css" />
+
+		<!--Fonts-->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bungee&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header>
