fixing logo problem on mobile (again)

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				/>
 			</div>
 			<div class="button_links">
-				<a href="https://www.youtube.com/@chrstnmmnl">Support</a>
-				<a href="https://elms.sti.edu">ELMS</a>
-				<a href="https://one.sti.edu/">Home</a>
+				<a class="link" href="https://www.youtube.com/@chrstnmmnl">Support</a>
+				<a class="link" href="https://elms.sti.edu">ELMS</a>
+				<a class="link" href="https://one.sti.edu/">Home</a>
 			</div>
 		</header>
 
@@ -77,5 +77,6 @@
 		</section>
 
 		<script src="./JS/Compute.js"></script>
+		<script src="./JS/MediaQuery.js"></script>
 	</body>
 </html>
