--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>GWA Calculator</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="" />
+		<link rel="icon" type="image/x-icon" href="./IMG/logo_favicon.png" />
 
 		<!--Styles-->
 		<link rel="stylesheet" href="./CSS/style.css" />
