--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 				/>
 			</div>
 			<div class="button_links">
-				<a class="link" href="https://www.youtube.com/@chrstnmmnl">Support</a>
+				<a class="link" href="https://www.youtube.com/@chrstnmmnl"
+					>Support</a
+				>
 				<a class="link" href="https://elms.sti.edu">ELMS</a>
 				<a class="link" href="https://one.sti.edu/">Home</a>
 			</div>
@@ -46,37 +48,40 @@
 				<div class="Courses">
 					<div class="CourseName">
 						<h2>Course name:</h2>
-						<input type="text" class="InputC" />
+						<input type="text" class="InputC" id="courseInput"/>
 					</div>
 					<h2 class="UnitsLabel">Number of units:</h2>
-					<input type="text" class="units" />
+					<input type="text" class="units" id="courseUnit" />
 				</div>
 				<div class="terms" id="prelim">
 					<h3>Prelim:</h3>
-					<input type="text" class="inputTerms" />
+					<input type="text" class="inputTerms" id="prelimInput" />
 				</div>
 				<div class="terms" id="midterm">
 					<h3>Midterm:</h3>
-					<input type="text" class="inputTerms" />
+					<input type="text" class="inputTerms" id="midtermInput" />
 				</div>
 				<div class="terms" id="prefinal">
 					<h3>Prefinal:</h3>
-					<input type="text" class="inputTerms" />
+					<input type="text" class="inputTerms" id="prefinalInput" />
 				</div>
 				<div class="terms" id="final">
 					<h3>Final:</h3>
-					<input type="text" class="inputTerms" />
+					<input type="text" class="inputTerms" id="finalInput" />
 				</div>
-				<div class="buttonDiscard">
-					<h3>Discard Course</h3>
-				</div>
-				<div class="buttonAdd">
-					<h3>Add Course</h3>
-				</div>
+				<button class="buttonDiscard" type="button">
+					Discard Course
+				</button>
+				<button
+					class="buttonAdd"
+					type="button"
+					onclick="computeOverall(prelim, midterm, prefinal, final)"
+				>
+					Add Course
+				</button>
 			</div>
 		</section>
 
 		<script src="./JS/Compute.js"></script>
-		<script src="./JS/MediaQuery.js"></script>
 	</body>
 </html>
