--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="./CSS/main.css" />
 		<link rel="stylesheet" href="./CSS/header.css" />
 		<link rel="stylesheet" href="./CSS/addCourse.css" />
+		<link rel="stylesheet" href="./CSS/listOfCourses.css" />
 
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -83,6 +84,183 @@
 				>
 					Add Course
 				</button>
+			</div>
+		</section>
+		<section class="contentWrapper">
+			<div class="title">
+				<h1>List of Courses</h1>
+			</div>
+			<div class="tableWrapper">
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
+				</div>
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
+				</div>
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
+				</div>
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
+				</div>
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
+				</div>
 			</div>
 		</section>
 
