--- a/testing.html
+++ b/testing.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="./CSS/style.css" />
 		<link rel="stylesheet" href="./CSS/main.css" />
 		<link rel="stylesheet" href="./CSS/header.css" />
+		<link rel="stylesheet" href="./CSS/listOfCourses.css" />
 		<link rel="stylesheet" href="./CSS/Fix.css" />
 
 		<!--Fonts-->
@@ -38,41 +39,182 @@
 		</header>
 		<!--Main Section-->
 		<section class="contentWrapper">
-			<div class="addCourse">
-				<div class="title">
-					<h1>Course & Grades</h1>
-				</div>
-				<div class="Courses">
-					<div class="CourseName">
-						<h2>Course name:</h2>
-						<input type="text" class="InputC" />
+			<div class="title">
+				<h1>List of Courses</h1>
+			</div>
+			<div class="tableWrapper">
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
 					</div>
-					<h2 class="UnitsLabel">Number of units:</h2>
-					<input type="text" class="units" />
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
 				</div>
-				<div class="terms" id="prelim">
-					<h3>Prelim:</h3>
-					<input type="text" class="inputTerms" />
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
 				</div>
-				<div class="terms" id="midterm">
-					<h3>Midterm:</h3>
-					<input type="text" class="inputTerms" />
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
 				</div>
-				<div class="terms" id="prefinal">
-					<h3>Prefinal:</h3>
-					<input type="text" class="inputTerms" />
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
 				</div>
-				<div class="terms" id="final">
-					<h3>Final:</h3>
-					<input type="text" class="inputTerms" />
-				</div>
-				<div class="buttonDiscard">
-					<h3>Discard Course</h3>
-				</div>
-				<div class="buttonAdd">
-					<h3>Add Course</h3>
+				<div class="resultTable">
+					<div class="tableTitle">
+						<h2 id="TitleResult">Course or Subject Name</h2>
+					</div>
+					<div class="termsAndGrades">
+						<div class="terms">
+							<h2>Prelim:</h2>
+							<h3 id="PrelimResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Midterm:</h2>
+							<h3 id="MidtermResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Prefinal:</h2>
+							<h3 id="PrefinalResult">00.00</h3>
+						</div>
+						<div class="terms">
+							<h2>Final:</h2>
+							<h3 id="FinalResult">00.00</h3>
+						</div>
+					</div>
+					<div class="overAllGrade">
+						<h2>Overall grade</h2>
+						<h2 id="overAllResult">00.00</h2>
+					</div>
+					<button
+						class="RemoveCourseButton"
+						type="button"
+						onclick="removeCourse()"
+					>
+						Remove Course
+					</button>
 				</div>
 			</div>
 		</section>
 	</body>
 </html>
+ 
