adding more features to my calculator

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		<!--Main Section-->
 		<section class="contentWrapper">
-			<div class="addCourse">
+			<div class="addCourse" id="AddCourse">
 				<div class="titleCourse">
 					<h1>Course & Grades</h1>
 				</div>
@@ -85,7 +85,7 @@
 					Add Course
 				</button>
 			</div>
-			<div class="resultWrapper">
+			<div class="resultWrapper" id="viewResult">
 				<div class="titleResult">
 					<h1>List of Courses</h1>
 				</div>
