--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Bungee&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
@@ -41,7 +39,7 @@
 		</header>
 
 		<!--Main Section-->
-		<section class="contentWrapper">
+		<section class="contentWrapper" id="mainWrapper">
 			<div class="addCourse" id="AddCourse">
 				<div class="titleCourse">
 					<h1>Course & Grades</h1>
@@ -85,46 +83,11 @@
 					Add Course
 				</button>
 			</div>
-			<div class="resultWrapper" id="viewResult" style="display: none;">
+			<div class="resultWrapper" id="viewResult" style="display: none">
 				<div class="titleResult">
 					<h1>List of Courses</h1>
 				</div>
-				<div class="tableWrapper">
-					<div class="resultTable">
-						<div class="tableTitle">
-							<h2 id="TitleResult">Course or Subject Name</h2>
-						</div>
-						<div class="termsAndGrades">
-							<div class="terms">
-								<h2>Prelim:</h2>
-								<h3 id="PrelimResult">00.00</h3>
-							</div>
-							<div class="terms">
-								<h2>Midterm:</h2>
-								<h3 id="MidtermResult">00.00</h3>
-							</div>
-							<div class="terms">
-								<h2>Prefinal:</h2>
-								<h3 id="PrefinalResult">00.00</h3>	
-							</div>
-							<div class="terms">
-								<h2>Final:</h2>
-								<h3 id="FinalResult">00.00</h3>
-							</div>
-						</div>
-						<div class="overAllGrade">
-							<h2>Overall grade</h2>
-							<h2 id="overAllResult">00.00</h2>
-						</div>
-						<button
-							class="RemoveCourseButton"
-							type="button"
-							onclick="removeCourse()"
-						>
-							Remove Course
-						</button>
-					</div>
-				</div>
+				<div class="tableWrapper" id="mainTableWrapper"></div>
 			</div>
 		</section>
 
@@ -133,4 +96,6 @@
 	</body>
 </html>
 
-<!--GOAL FOR -->
+<!--GOAL FOR TODAY IS TO ADD A FEATURE WHERE THE USER WILL SEE THE LIST OF COURSES THAT THEY PROMPT (ALREADY IMPLEMENT 12/28/24 3:10AM)-->
+<!--THE USER CAN ALSO REMOVE THE COURSE THAT THEY WISHED TO (PENDING)-->
+<!--ALSO START IMPLEMENTING THE GWA RESULT, THIS SHOULD BE DONE BEFORE NEW YEAR!!!-->
