fixing issue on add course button

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<button
 					class="buttonAdd"
 					type="button"
-					onclick="computeOverall(prelim, midterm, prefinal, final)"
+					onclick="computeOverall()"
 				>
 					Add Course
 				</button>
