again fixing the import issue on javascript

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</div>
 		</section>
 
-		<script src="./JS/compute.js"></script>
+		<script src="./JS/Compute.js"></script>
 	</body>
 </html>
 
