--- a/index.html
+++ b/index.html
@@ -96,5 +96,5 @@
 </html>
 
 <!--GOAL FOR TODAY IS TO ADD A FEATURE WHERE THE USER WILL SEE THE LIST OF COURSES THAT THEY PROMPT (ALREADY IMPLEMENT 12/28/24 3:10AM)-->
-<!--THE USER CAN ALSO REMOVE THE COURSE THAT THEY WISHED TO (PENDING)-->
+<!--THE USER CAN ALSO REMOVE THE COURSE THAT THEY WISHED TO (PENDING)-- (ALREADY IMPLEMENTED 12/28/23 4:17pm)>
 <!--ALSO START IMPLEMENTING THE GWA RESULT, THIS SHOULD BE DONE BEFORE NEW YEAR!!!-->
