--- a/testing.html
+++ b/testing.html
@@ -42,7 +42,7 @@
 			<div class="titleResult">
 				<h1>List of Courses</h1>
 			</div>
-			<div class="tableWrapper">
+			<div class="tableWrapper" id="mainTableWrapper">
 				<div class="resultTable">
 					<div class="tableTitle">
 						<h2 id="TitleResult">Course or Subject Name</h2>
