fixing the input mode for numeric

--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
 						<input type="text" class="InputC" id="courseInput" />
 					</div>
 					<h2 class="UnitsLabel">Number of units:</h2>
-					<input type="text" class="units" id="courseUnit" />
+					<input type="text" inputmode="decimal" class="units" id="courseUnit" />
 				</div>
 				<div class="terms" id="prelim">
 					<h3>Prelim:</h3>
-					<input type="text" class="inputTerms" id="prelimInput" />
+					<input type="text" inputmode="decimal" class="inputTerms" id="prelimInput" />
 				</div>
 				<div class="terms" id="midterm">
 					<h3>Midterm:</h3>
-					<input type="text" class="inputTerms" id="midtermInput" />
+					<input type="text" inputmode="decimal" class="inputTerms" id="midtermInput" />
 				</div>
 				<div class="terms" id="prefinal">
 					<h3>Prefinal:</h3>
-					<input type="text" class="inputTerms" id="prefinalInput" />
+					<input type="text" inputmode="decimal" class="inputTerms" id="prefinalInput" />
 				</div>
 				<div class="terms" id="final">
 					<h3>Final:</h3>
-					<input type="text" class="inputTerms" id="finalInput" />
+					<input type="text" inputmode="decimal" class="inputTerms" id="finalInput" />
 				</div>
 				<button
 					class="buttonDiscard"
