--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				/>
 			</div>
 			<div class="button_links">
-				<a class="link" href="https://www.youtube.com/@chrstnmmnl"
+				<!--<a class="link" href="https://www.youtube.com/@chrstnmmnl"
 					>Support</a
-				>
+			-->
 				<a class="link" href="https://elms.sti.edu">ELMS</a>
 				<a class="link" href="https://one.sti.edu/">Home</a>
 			</div>
