finally done with the re-design

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				/>
 			</div>
 			<div class="button_links">
-				<!--<a class="link" href="https://www.youtube.com/@chrstnmmnl"
+				<a class="link" href="https://www.youtube.com/@chrstnmmnl"
 					>Support</a
 			-->
 				<a class="link" href="https://elms.sti.edu">ELMS</a>
@@ -159,3 +159,4 @@
 <!--GOAL FOR TODAY IS TO ADD A FEATURE WHERE THE USER WILL SEE THE LIST OF COURSES THAT THEY PROMPT (ALREADY IMPLEMENT 12/28/24 3:10AM)-->
 <!--THE USER CAN ALSO REMOVE THE COURSE THAT THEY WISHED TO (PENDING)-- (ALREADY IMPLEMENTED 12/28/23 4:17pm)>
 <!--ALSO START IMPLEMENTING THE GWA RESULT, THIS SHOULD BE DONE BEFORE NEW YEAR!!!-->
+<!--ITS ALREADY 31ST OF DECEMBER??? HELLO WHEN ARE YOU GONNA FINISHED THE WEBSITE ITS ALMOST THE DEADLINE!!!-->
