--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				/>
 			</div>
 			<div class="button_links">
-				<a class="link" href="https://www.youtube.com/@chrstnmmnl"
+				<a class="link" href="https://github.com/chrstnmmn"
 					>Support</a
 			-->
 				<a class="link" href="https://elms.sti.edu">ELMS</a>
