done with the footer, proceeding on completing the javascript computation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="./CSS/header.css" />
 		<link rel="stylesheet" href="./CSS/addCourse.css" />
 		<link rel="stylesheet" href="./CSS/listOfCourses.css" />
+		<link rel="stylesheet" href="./CSS/summaryOfFindings.css" />
+		<link rel="stylesheet" href="./CSS/footer.css" />
 
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -182,7 +184,34 @@
 				<div class="tableWrapper" id="mainTableWrapper"></div>
 			</div>
 		</section>
-
+		<footer>
+			<div class="main">
+				<div class="Grading-Wrapper">
+					<h4>Grading System</h4>
+					<div class="lists">
+						<ul class="col01">
+							<li>97.50 - 100% (1.00) Excellent</li>
+							<li>94.50 - 97.49% (1.25) Very Good</li>
+							<li>91.50 - 94.49% (1.50) Very Good</li>
+							<li>88.50 - 91.49% (1.75) Very Good</li>
+						</ul>
+						<ul class="col01">
+							<li>85.50 - 88.49% (2.00) Satisfactory</li>
+							<li>81.50 - 85.49% (2.25) Satisfactory</li>
+							<li>77.50 - 81.49% (2.50) Satisfactory</li>
+							<li>73.50 - 77.49% (2.75) Fair</li>
+						</ul>
+						<ul class="col01">
+							<li>69.50 - 73.49% (3.00) Fair</li>
+							<li>Below 69.49% (5.00) Failed</li>
+							<li>Dropped (DRP) Officially Dropped</li>
+							<li>Incomplete (INC) Incomplete Requirements</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<h6>© STI Education Services Group, Inc. All Rights Reserved.</h6>
+		</footer>
 		<script src="./JS/index.js"></script>
 	</body>
 </html>
