adding CTA before showing the Summary table

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="./CSS/listOfCourses.css" />
 		<link rel="stylesheet" href="./CSS/summaryOfFindings.css" />
 		<link rel="stylesheet" href="./CSS/footer.css" />
+		<link rel="stylesheet" href="./CSS/CTA.css" />
 
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -183,33 +184,72 @@
 				</div>
 				<div class="tableWrapper" id="mainTableWrapper"></div>
 			</div>
-		</section>
-		<footer>
-			<div class="main">
-				<div class="Grading-Wrapper">
-					<h4>Grading System</h4>
-					<div class="lists">
-						<ul class="col01">
-							<li>97.50 - 100% (1.00) Excellent</li>
-							<li>94.50 - 97.49% (1.25) Very Good</li>
-							<li>91.50 - 94.49% (1.50) Very Good</li>
-							<li>88.50 - 91.49% (1.75) Very Good</li>
+			<div class="summary-of-Findings">
+				<div class="summary-Wrapper">
+					<div class="summary-Title">
+						<svg
+							class="icon-title"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 21 21"
+							fill="none"
+						>
+							<path
+								d="M19.1208 3.75H18.0042C18.0031 3.75 18.002 3.75044 18.0012 3.75124C18.0004 3.75203 18 3.7531 18 3.75422V18C18 18.3978 18.158 18.7794 18.4393 19.0607C18.7206 19.342 19.1022 19.5 19.5 19.5C19.8978 19.5 20.2794 19.342 20.5607 19.0607C20.842 18.7794 21 18.3978 21 18V5.62922C21 5.13082 20.802 4.65283 20.4496 4.30041C20.0972 3.94799 19.6192 3.75 19.1208 3.75Z"
+								fill="white"
+							/>
+							<path
+								d="M16.5 18V1.875C16.5 1.62877 16.4515 1.38495 16.3573 1.15747C16.263 0.929983 16.1249 0.723285 15.9508 0.549175C15.7767 0.375065 15.57 0.236953 15.3425 0.142726C15.115 0.0484983 14.8712 0 14.625 0H1.875C1.37772 0 0.900805 0.197544 0.549175 0.549175C0.197544 0.900805 0 1.37772 0 1.875V18.375C0 19.0712 0.276562 19.7389 0.768845 20.2312C1.26113 20.7234 1.92881 21 2.625 21H18.6961C18.7032 21.0001 18.7102 20.9987 18.7168 20.996C18.7234 20.9933 18.7293 20.9894 18.7344 20.9844C18.7394 20.9793 18.7433 20.9734 18.746 20.9668C18.7487 20.9602 18.7501 20.9532 18.75 20.9461C18.75 20.9343 18.7461 20.9229 18.7388 20.9135C18.7316 20.9042 18.7216 20.8975 18.7102 20.8945C18.0757 20.7205 17.5159 20.3431 17.1167 19.8202C16.7174 19.2973 16.5008 18.6579 16.5 18ZM3 4.5C3 4.30109 3.07902 4.11032 3.21967 3.96967C3.36032 3.82902 3.55109 3.75 3.75 3.75H6.75C6.94891 3.75 7.13968 3.82902 7.28033 3.96967C7.42098 4.11032 7.5 4.30109 7.5 4.5V7.5C7.5 7.69891 7.42098 7.88968 7.28033 8.03033C7.13968 8.17098 6.94891 8.25 6.75 8.25H3.75C3.55109 8.25 3.36032 8.17098 3.21967 8.03033C3.07902 7.88968 3 7.69891 3 7.5V4.5ZM12.75 17.25H3.77109C3.3675 17.25 3.02109 16.9397 3.00094 16.5361C2.99605 16.4347 3.01181 16.3333 3.04724 16.2382C3.08268 16.1431 3.13707 16.0561 3.2071 15.9826C3.27714 15.9091 3.36137 15.8506 3.45469 15.8106C3.54801 15.7706 3.64848 15.75 3.75 15.75H12.7289C13.1325 15.75 13.4789 16.0603 13.4991 16.4639C13.5039 16.5653 13.4882 16.6667 13.4528 16.7618C13.4173 16.8569 13.3629 16.9439 13.2929 17.0174C13.2229 17.0909 13.1386 17.1494 13.0453 17.1894C12.952 17.2294 12.8515 17.25 12.75 17.25ZM12.75 14.25H3.77109C3.3675 14.25 3.02109 13.9397 3.00094 13.5361C2.99605 13.4347 3.01181 13.3333 3.04724 13.2382C3.08268 13.1431 3.13707 13.0561 3.2071 12.9826C3.27714 12.9091 3.36137 12.8506 3.45469 12.8106C3.54801 12.7706 3.64848 12.75 3.75 12.75H12.7289C13.1325 12.75 13.4789 13.0603 13.4991 13.4639C13.5039 13.5653 13.4882 13.6667 13.4528 13.7618C13.4173 13.8569 13.3629 13.9439 13.2929 14.0174C13.2229 14.0909 13.1386 14.1494 13.0453 14.1894C12.952 14.2294 12.8515 14.25 12.75 14.25ZM12.75 11.25H3.77109C3.3675 11.25 3.02109 10.9397 3.00094 10.5361C2.99605 10.4347 3.01181 10.3333 3.04724 10.2382C3.08268 10.1431 3.13707 10.0561 3.2071 9.98261C3.27714 9.90911 3.36137 9.8506 3.45469 9.81062C3.54801 9.77063 3.64848 9.75001 3.75 9.75H12.7289C13.1325 9.75 13.4789 10.0603 13.4991 10.4639C13.5039 10.5653 13.4882 10.6667 13.4528 10.7618C13.4173 10.8569 13.3629 10.9439 13.2929 11.0174C13.2229 11.0909 13.1386 11.1494 13.0453 11.1894C12.952 11.2294 12.8515 11.25 12.75 11.25ZM12.75 8.25H9.77109C9.3675 8.25 9.02109 7.93969 9.00094 7.53609C8.99605 7.43469 9.0118 7.33334 9.04724 7.2382C9.08268 7.14306 9.13707 7.05611 9.2071 6.98261C9.27714 6.90911 9.36137 6.8506 9.45469 6.81062C9.54801 6.77063 9.64848 6.75001 9.75 6.75H12.7289C13.1325 6.75 13.4789 7.06031 13.4991 7.46391C13.5039 7.56531 13.4882 7.66666 13.4528 7.7618C13.4173 7.85694 13.3629 7.94389 13.2929 8.01739C13.2229 8.09089 13.1386 8.1494 13.0453 8.18938C12.952 8.22937 12.8515 8.24999 12.75 8.25ZM12.75 5.25H9.77109C9.3675 5.25 9.02109 4.93969 9.00094 4.53609C8.99605 4.43469 9.0118 4.33334 9.04724 4.2382C9.08268 4.14307 9.13707 4.05611 9.2071 3.98261C9.27714 3.90911 9.36137 3.8506 9.45469 3.81062C9.54801 3.77063 9.64848 3.75001 9.75 3.75H12.7289C13.1325 3.75 13.4789 4.06031 13.4991 4.46391C13.5039 4.56531 13.4882 4.66666 13.4528 4.7618C13.4173 4.85694 13.3629 4.94389 13.2929 5.01739C13.2229 5.09089 13.1386 5.1494 13.0453 5.18938C12.952 5.22937 12.8515 5.24999 12.75 5.25Z"
+								fill="white"
+							/>
+						</svg>
+						<h2 class="TitleResult">Summary of Findings</h2>
+					</div>
+					<div class="SummaryTable">
+						<h3 class="Table-Title" id="Course-Catalog-Title">
+							Course Catalog
+						</h3>
+						<ul class="Course-Catalog-Table">
+							<li>No courses added yet.</li>
 						</ul>
-						<ul class="col01">
-							<li>85.50 - 88.49% (2.00) Satisfactory</li>
-							<li>81.50 - 85.49% (2.25) Satisfactory</li>
-							<li>77.50 - 81.49% (2.50) Satisfactory</li>
-							<li>73.50 - 77.49% (2.75) Fair</li>
+						<h3 class="Table-Title" id="Grades-Title">Grades</h3>
+						<ul class="Grades-Table">
+							<li>00.00</li>
 						</ul>
-						<ul class="col01">
-							<li>69.50 - 73.49% (3.00) Fair</li>
-							<li>Below 69.49% (5.00) Failed</li>
-							<li>Dropped (DRP) Officially Dropped</li>
-							<li>Incomplete (INC) Incomplete Requirements</li>
+						<h3 class="Table-Title" id="Units-Title">Units</h3>
+						<ul class="Units-Table">
+							<li>00.00</li>
 						</ul>
+						<h3 class="Table-Title" id="Remarks-Title">Remarks</h3>
+						<ul class="Remarks-Table">
+							<li>
+								<img
+									src="./IMG/Passed-Icon.svg"
+									alt="Passed-Icon"
+								/>
+								<h2>?</h2>
+							</li>
+						</ul>
+						<h3 class="Table-Title" id="Credits-Title">Credits</h3>
+						<ul class="Credits-Table">
+							<li>00.00</li>
+						</ul>
+						<div class="Total-Units" id="TotalUnits">
+							<h4>Total Units</h4>
+							<h4>00.00</h4>
+						</div>
+						<div class="Total-Credits" id="TotalCredits">
+							<h4>Total Credits</h4>
+							<h4>00.00</h4>
+						</div>
+						<div class="GWA-Result" id="GWA">
+							<h4>GWA RESULT</h4>
+							<h4 class="GWA-Value">00.00</h4>
+						</div>
 					</div>
 				</div>
 			</div>
+		</section>
+		<footer id="Footer">
 			<h6>© STI Education Services Group, Inc. All Rights Reserved.</h6>
 		</footer>
 		<script src="./JS/index.js"></script>
