forgot to add in the main html

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
 				</div>
 				<div class="tableWrapper" id="mainTableWrapper"></div>
 			</div>
+			<div class="CTA">
+				<h1>Ready to see your GWA?</h1>
+				<button id="CTA-Button">Show me!</button>
+			</div>
 			<div class="summary-of-Findings">
 				<div class="summary-Wrapper">
 					<div class="summary-Title">
