working in progress

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="resultWrapper" id="viewResult" style="display: none">
+			<div class="resultWrapper" id="viewResult">
 				<div class="titleResult">
 					<svg
 						class="CourseCatalog-Icon"
@@ -184,11 +184,11 @@
 				</div>
 				<div class="tableWrapper" id="mainTableWrapper"></div>
 			</div>
-			<div class="CTA">
+			<div class="CTA" id="cta">
 				<h1>Ready to see your GWA?</h1>
 				<button id="CTA-Button">Show me!</button>
 			</div>
-			<div class="summary-of-Findings">
+			<div class="summary-of-Findings" id="summary">
 				<div class="summary-Wrapper">
 					<div class="summary-Title">
 						<svg
